shmuel 2024-11-07 19:43:26+02:00 - build 858

1. LuaFAR: prevent a certain kind of crashes
   E.g. lua:far.Timer(1000, function() error {} end)

shmuel 2024-11-06 23:51:17+02:00 - build 857

1. LuaFAR: change win.JoinPath a little (see the manual)

shmuel 2024-10-31 22:45:33+02:00 - build 856

1. LuaFAR: fix actl.GetFarmanagerVersion(true)

2. LuaFAR: rename actl.GetFarmanagerVersion to actl.GetFarManagerVersion

shmuel 2024-10-28 21:17:03+02:00 - build 855

1. LuaFAR: viewer.Quit() returns a boolean (was: nothing).

shmuel 2024-10-09 23:52:28+03:00 - build 854

1. Refactoring

shmuel 2024-10-09 17:41:49+03:00 - build 853

1. Lpeg is now part of LuaFAR (no need for lpeg.dll).

shmuel 2024-10-03 22:53:54+03:00 - build 852

1. LuaFAR: refactoring.

shmuel 2024-10-03 22:41:21+03:00 - build 851

1. LuaFAR: refactoring.

drkns 2024-09-24 16:09:16+01:00 - build 850

1. Initialize all fields in user controls.

shmuel 2024-09-21 01:58:53+03:00 - build 849

1. LuaFAR: a fix in makefarkeys.lua.

shmuel 2024-09-01 22:41:48+03:00 - build 848

1. Macrobrowser: refactoring.

shmuel 2024-08-17 10:06:48+03:00 - build 847

1. LuaFAR:
     Disable calling Lua handler of ProcessConsoleInput while error message is displayed.
     See also: Mantis #3035, builds 523 and 605, Github #865.

shmuel 2024-07-13 15:19:38+03:00 - build 846

1. A small fix.

shmuel 2024-06-30 22:27:03+03:00 - build 845

1. LuaFAR: fix a memory leak.

shmuel 2024-06-20 17:41:53+03:00 - build 844

1. LuaFAR: refactoring

shmuel 2024-06-17 09:32:42+03:00 - build 843

1. LuaFAR: refactoring

shmuel 2024-06-12 01:00:14+03:00 - build 842

1. LuaFAR: refactoring

shmuel 2024-06-09 21:52:16+03:00 - build 841

1.  LuaFAR: make tostring on bit64 output in hex.

zg 2024-06-04 00:07:01+03:00 - build 840

1. Adaptation to Far 3.0.6342.

shmuel 2024-05-30 00:17:44+03:00 - build 839

1. Refactoring.

shmuel 2024-05-26 14:45:02+03:00 - build 838

1. Fix the last commit.

shmuel 2024-05-26 14:21:23+03:00 - build 837
