@@ -187,12 +187,13 @@ void DeleteLuaStateTimerQueue(lua_State *L)
 	lua_setfield(L, LUA_REGISTRYINDEX, FarTimerQueueKey);
 }
 
-static TSynchroData* CreateSynchroData(TTimerData *td, int action, int data)
+static TSynchroData* CreateSynchroData(int type, int data, TTimerData *td)
 {
 	TSynchroData* SD = (TSynchroData*) malloc(sizeof(TSynchroData));
-	SD->timerData = td;
-	SD->regAction = action;
+	SD->type = type;
 	SD->data = data;
+	SD->ref = LUA_REFNIL;
+	SD->timerData = td;
 	return SD;
 }
 
@@ -4812,7 +4813,9 @@ static int DoAdvControl (lua_State *L, int Command, int Delta)
 	PSInfo *Info = pd->Info;
 	intptr_t Param1 = 0;
 	void *Param2 = NULL;
-	lua_settop(L,pos3);  /* for proper calling GetOptIntFromTable and the like */
+
+	if (Command != ACTL_SYNCHRO)
+		lua_settop(L,pos3);  /* for proper calling GetOptIntFromTable and the like */
 
 	if (Delta == 0)
 		Command = CAST(int, check_env_flag(L, 1));
@@ -4866,11 +4869,25 @@ static int DoAdvControl (lua_State *L, int Command, int Delta)
 		}
 
 		case ACTL_SYNCHRO:
-		{
-			intptr_t p = luaL_checkinteger(L, pos2);
-			Param2 = CreateSynchroData(NULL, 0, (int)p);
-			break;
-		}
+			if (lua_isfunction(L, pos2)) {
+				TSynchroData *sd = CreateSynchroData(SYNCHRO_FUNCTION, 0, NULL);
+				int top = lua_gettop(L);
+				sd->narg = top - pos2 + 1;
+				lua_newtable(L);
+				for (int i=pos2,j=1; i <= top; ) {
+					lua_pushvalue(L, i++);
+					lua_rawseti(L, -2, j++);
+				}
+				sd->ref = luaL_ref(L, LUA_REGISTRYINDEX);
+				lua_pushinteger(L, Info->AdvControl(PluginId, Command, 0, sd));
+				return 1;
+			}
+			else {
+				luaL_argcheck(L, lua_isnumber(L,pos2), pos2, "integer or function expected");
+				TSynchroData *sd = CreateSynchroData(SYNCHRO_COMMON, lua_tointeger(L,pos2), NULL);
+				lua_pushinteger(L, Info->AdvControl(PluginId, Command, 0, sd));
+				return 1;
+			}
 
 		case ACTL_SETPROGRESSSTATE:
 			Param1 = (intptr_t) check_env_flag(L, pos2);
@@ -5748,7 +5765,7 @@ void CALLBACK TimerCallback(void *lpParameter, BOOLEAN TimerOrWaitFired)
 	(void)TimerOrWaitFired;
 	if (!td->needClose && td->enabled)
 	{
-		sd = CreateSynchroData(td, LUAFAR_TIMER_CALL, 0);
+		sd = CreateSynchroData(SYNCHRO_TIMER_CALL, 0, td);
 		td->Info->AdvControl(td->PluginGuid, ACTL_SYNCHRO, 0, sd);
 	}
 }
@@ -5824,7 +5841,7 @@ static int timer_Close(lua_State *L)
 		hQueue = GetLuaStateTimerQueue(L);
 		if (hQueue)
 			DeleteTimerQueueTimer(hQueue, td->hTimer, NULL);
-		sd = CreateSynchroData(td, LUAFAR_TIMER_UNREF, 0);
+		sd = CreateSynchroData(SYNCHRO_TIMER_UNREF, 0, td);
 		td->Info->AdvControl(td->PluginGuid, ACTL_SYNCHRO, 0, sd);
 	}
 	return 0;
