@@ -22,8 +22,10 @@ _CRTIMP unsigned int __cdecl __MINGW_NOTHROW _control87 (unsigned int unNew, uns
 /* convert a stack index to positive */
 #define abs_index(L,i) ((i)>0 || (i)<=LUA_REGISTRYINDEX ? (i):lua_gettop(L)+(i)+1)
 
-#define LUAFAR_TIMER_CALL  0x1
-#define LUAFAR_TIMER_UNREF 0x2
+#define SYNCHRO_COMMON      0x0
+#define SYNCHRO_TIMER_CALL  0x1
+#define SYNCHRO_TIMER_UNREF 0x2
+#define SYNCHRO_FUNCTION    0x4
 
 typedef struct
 {
@@ -45,8 +47,10 @@ typedef struct
 typedef struct
 {
 	TTimerData *timerData;
-	int regAction;
+	int type;
 	int data;
+	int ref;
+	int narg;
 } TSynchroData;
 
 typedef struct
